        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=15080
        <use> element not refresh after adding objects by script in referrer

        Update shadow tree when elements are added/removed from a tree
        that is referenced by a <use>.



Canonical link: https://commits.webkit.org/20516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26526 268f45cc-cd09-0410-ab3c-d52691b4dbfc